# app/Http/Controllers/BookingController.php
@@ -1,86 +1,0 @@
-<?php
-
-namespace App\Http\Controllers;
-
-use App\Http\Resources\BookingResource;
-use App\Models\Booking;
-use Illuminate\Http\Request;
-
-/**
- * @OA\Schema(
- *     schema="Booking",
- *     type="object",
- *     @OA\Property(
- *         property="id",
- *         type="integer",
- *         example=1
- *     ),
- *     @OA\Property(
- *         property="resource_id",
- *         type="integer",
- *         example=1
- *     ),
- *     @OA\Property(
- *         property="user_id",
- *         type="integer",
- *         example=1
- *     ),
- *     @OA\Property(
- *         property="start_time",
- *         type="string",
- *         format="date-time",
- *         example="2025-04-01T14:00:00Z"
- *     ),
- *     @OA\Property(
- *         property="end_time",
- *         type="string",
- *         format="date-time",
- *         example="2025-04-01T16:00:00Z"
- *     ),
- *     @OA\Property(
- *         property="created_at",
- *         type="string",
- *         format="date-time",
- *         example="2025-04-01T12:00:00Z"
- *     ),
- *     @OA\Property(
- *         property="updated_at",
- *         type="string",
- *         format="date-time",
- *         example="2025-04-01T12:00:00Z"
- *     )
- * )
- */
-class BookingController extends Controller
-{
-    /**
-     * Получить список всех бронирований
-     *
-     * @OA\Get(
-     *     path="/api/bookings",
-     *     summary="Получить список всех бронирований",
-     *     tags={"Bookings"},
-     *     @OA\Response(
-     *         response=200,
-     *         description="Успешное получение списка бронирований",
-     *         @OA\JsonContent(
-     *             type="array",
-     *             @OA\Items(ref="#/components/schemas/Booking")
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response=500,
-     *         description="Ошибка сервера"
-     *     )
-     * )
-     */
-    public function index()
-    {
-        return BookingResource::collection(Booking::all());
-    }
-
-    public function show(Booking $booking)
-    {
-        return new BookingResource($booking);
-    }
-}
